--- a/nextjs-fundamentals/package.json
+++ b/nextjs-fundamentals/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier": "prettier --write .",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,19 @@
     "next": "^12.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.16",
+    "@types/react": "^17.0.39",
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
+    "typescript": "^4.5.5"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
   }
 }
