[UPDATE] implement functional components to the project Platzi Avo

--- a/nextjs-fundamentals/tsconfig.json
+++ b/nextjs-fundamentals/tsconfig.json
@@ -5,6 +5,7 @@
       "@database": ["database/db.ts"],
       "@cors": ["cors-middleware.ts"],
       "@components/*": ["components/*"],
+      "@store/*": ["store/*"],
     },
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
