--- a/nextjs-fundamentals/package.json
+++ b/nextjs-fundamentals/package.json
@@ -15,9 +15,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "^12.0.10",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.16",
